--- a/index.html
+++ b/index.html
@@ -24,34 +24,34 @@
 		
 		<div id="row1">
 		<ul>
-			<li><img src="logos/Canada.png"><input type="button" id="canada" value="Canada" /></img></li>
-			<li><img src="logos/Alberta.png"><input type="button" id="alberta" value="Alberta" /></img></li>
-			<li><img src="logos/BritishColumbia.png"><input type="button" id="britishcolumbia" value="British Columbia" /></img></li>
-			<li><img src="logos/Manitoba.png"><input type="button" id="manitoba" value="Manitoba" /></img></li>
-			<li><img src="logos/NewBrunswick.png"><input type="button" id="newbrunswick" value="New Brunswick" /></img></li>
-			<li><img src="logos/NewfoundlandAndLabrador.png"><input type="button" id="newfoundlandandlabrador" value="Newfoundland and Labrador" /></img></li>
+			<li><img src="logos/canada.png"><input type="button" id="canada" value="Canada" /></img></li>
+			<li><img src="logos/alberta.png"><input type="button" id="alberta" value="Alberta" /></img></li>
+			<li><img src="logos/britishcolumbia.png"><input type="button" id="britishcolumbia" value="British Columbia" /></img></li>
+			<li><img src="logos/manitoba.png"><input type="button" id="manitoba" value="Manitoba" /></img></li>
+			<li><img src="logos/newbrunswick.png"><input type="button" id="newbrunswick" value="New Brunswick" /></img></li>
+			<li><img src="logos/newfoundlandandlabrador.png"><input type="button" id="newfoundlandandlabrador" value="Newfoundland and Labrador" /></img></li>
 		</ul>
 		</div>
 		
 		<div id="row2">
 		<ul>
-			<li><img src="logos/NorthernOntario.png"><input type="button" id="northernontario" value="Northern Ontario" /></img></li>
-			<li><img src="logos/NovaScotia.png"><input type="button" id="novascotia" value="Nova Scotia" /></img></li>
-			<li><img src="logos/Ontario.png"><input type="button" id="ontario" value="Ontario" /></img></li>
-			<li><img src="logos/PrinceEdwardIsland.png"><input type="button" id="princeedwardisland" value="Prince Edward Island" /></img></li>
-			<li><img src="logos/Quebec.png"><input type="button" id="quebec" value="Quebec" /></img></li>
-			<li><img src="logos/Saskatchewan.png"><input type="button" id="saskatchewan" value="Saskatchewan" /></img></li>
+			<li><img src="logos/northernontario.png"><input type="button" id="northernontario" value="Northern Ontario" /></img></li>
+			<li><img src="logos/novascotia.png"><input type="button" id="novascotia" value="Nova Scotia" /></img></li>
+			<li><img src="logos/ontario.png"><input type="button" id="ontario" value="Ontario" /></img></li>
+			<li><img src="logos/princeedwardisland.png"><input type="button" id="princeedwardisland" value="Prince Edward Island" /></img></li>
+			<li><img src="logos/quebec.png"><input type="button" id="quebec" value="Quebec" /></img></li>
+			<li><img src="logos/saskatchewan.png"><input type="button" id="saskatchewan" value="Saskatchewan" /></img></li>
 		</ul>
 		</div>
 		
 		<div id="row3">
 		<ul>
-			<li><img src="logos/NorthwestTerritories.png"><input type="button" id="northwestterritories" value="Northwest Territories" /></img></li>
-			<li><img src="logos/Nunavut.png"><input type="button" id="nunavut" value="Nunavut" /></img></li>
-			<li><img src="logos/Yukon.png"><input type="button" id="yukon" value="Yukon" /></img></li>
-			<li><img src="logos/WildCard1.png"><input type="button" id="wildcard1" value="Wild Card 1" /></img></li>
-			<li><img src="logos/WildCard2.png"><input type="button" id="wildcard2" value="Wild Card 2" /></img></li>
-			<li><img src="logos/WildCard3.png"><input type="button" id="wildcard3" value="Wild Card 3" /></img></li>
+			<li><img src="logos/northwestterritories.png"><input type="button" id="northwestterritories" value="Northwest Territories" /></img></li>
+			<li><img src="logos/nunavut.png"><input type="button" id="nunavut" value="Nunavut" /></img></li>
+			<li><img src="logos/yukon.png"><input type="button" id="yukon" value="Yukon" /></img></li>
+			<li><img src="logos/wildcard1.png"><input type="button" id="wildcard1" value="Wild Card 1" /></img></li>
+			<li><img src="logos/wildcard2.png"><input type="button" id="wildcard2" value="Wild Card 2" /></img></li>
+			<li><img src="logos/wildcard3.png"><input type="button" id="wildcard3" value="Wild Card 3" /></img></li>
 		</ul>
 		</div>
 		
